--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 <div class="profile-page">
   <div class="wrapper">
     <div class="page-header page-header-small" filter-color="green">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg')"></div>
+      <div class="page-header-image" data-parallax="true" style="background-image: url('images/back-end-developer-1024x512.png')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/anthony.jpg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/1706496990353.jpg" alt="Image"/></a></div>
           <div class="h2 title">Juan Pisfil</div>
           <p class="category text-white">Diseñador Gráfico </p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contactame</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Descargar CV</a>
         </div>
@@ -180,8 +180,8 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/project-1.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Recent Project</div>
-                      <p>desarrolador web</p>
+                      <div class="h4">Proyecto Reciente</div>
+                      <p>Desarrolador web</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
@@ -196,14 +196,14 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/project-3.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Food Order Project</div>
+                      <div class="h4">Proyecto de Pedidos de Alimentos</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/project-4.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Web Advertising Project</div>
+                      <div class="h4">Proyecto Publicidad Web</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
